--- a/Mohamad/wwwroot/Mohamad/FranchiseDetails.html
+++ b/Mohamad/wwwroot/Mohamad/FranchiseDetails.html
@@ -2,39 +2,101 @@
 
 <template>
     <template is="dom-bind">
-       <a href="../start" > &lt; &lt; Back to start</a>
+        <a href="../start"> &lt; &lt; Back to start</a>
 
-        <h3>Settings: {{model.Name$}}</h3>
-        <h5>Edit Franchise Settings</h5>
-        <fieldset>
-            <label>Name: </label>
-            <input value="{{model.Name$::input}}" />
-        </fieldset>
-        <fieldset>
-            <label>Street: </label>
-            <input value="{{model.Street$::input}}" />
-        </fieldset>
-        <fieldset>
-            <label>Number: </label>
-            <input value="{{model.Number$::input}}" />
-        </fieldset>
-        <fieldset>
-            <label>ZipCode: </label>
-            <input value="{{model.ZipCode$::input}}" />
-        </fieldset>
-        <fieldset>
-            <label>City: </label>
-            <input value="{{model.City$::input}}" />
-        </fieldset>
-        <fieldset>
-            <label>Country: </label>
-            <input value="{{model.Country$::input}}" />
-        </fieldset>
-        <fieldset>
-            <label>Address: </label>
-            <label>{{model.Address}}</label> 
-        </fieldset>
+        <div>
+            <h3>Settings: {{model.Name$}}</h3>
+            <h5>Edit Franchise Settings</h5>
+            <fieldset>
+                <label>Name: </label>
+                <input value="{{model.Name$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Street: </label>
+                <input value="{{model.Street$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Number: </label>
+                <input value="{{model.Number$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>ZipCode: </label>
+                <input value="{{model.ZipCode$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>City: </label>
+                <input value="{{model.City$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Country: </label>
+                <input value="{{model.Country$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Address: </label>
+                <label>{{model.Address}}</label>
+            </fieldset>
 
-        <button value="{{model.SaveButton$::click}}" onmousedown="++this.value">Save</button>
+            <button value="{{model.SaveButton$::click}}" onmousedown="++this.value">Save</button>
+        </div>
+        <div>
+            <h5>Register new home for sale</h5>
+            <b>Home Info</b>
+            <fieldset>
+                <label>Street:</label>
+                <input value="{{model.HomeStreet$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Number:</label>
+                <input value="{{model.HomeNumber$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Zip code:</label>
+                <input value="{{model.HomeZipCode$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>City:</label>
+                <input value="{{model.HomeCity$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Country:</label>
+                <input value="{{model.HomeCountry$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Address: </label>
+                <label>{{model.HomeAddress}}</label>
+            </fieldset>
+            <b>Transaction Info</b>
+            <fieldset>
+                <label>Date (format: '2017-4-1'):</label>
+                <input value="{{model.HomeDate$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Sales Price:</label>
+                <input value="{{model.HomePrice$::input}}" />
+            </fieldset>
+            <fieldset>
+                <label>Commission:</label>
+                <input value="{{model.HomeCommission$::input}}" />
+            </fieldset>
+            <button value="{{model.RegisterHomeButton$::click}}" onmousedown="++this.value">Register</button>
+        </div>
+        <div>
+            <h5>List of transactions</h5>
+            <table>
+                <thead>
+                    <tr><th width="150px">Date</th> <th width="150px">Sales price</th> <th width="150px">Commission</th> <th width="200px">Address</th></tr>
+                </thead>
+                <tbody>
+                    <template is="dom-repeat" items="{{model.TransactionsList}}">
+                        <tr>
+                            <td>{{item.DateString}}</td>
+                            <td>{{item.Price}}</td>
+                            <td>{{item.Commission}}</td>
+                            <td>{{item.Address}}</td>
+                        </tr>
+                    </template>
+                </tbody>
+            </table>
+        </div>
     </template>
 </template>
