sorting franchises based on (sold homes, total commissio, ...)

--- a/Mohamad/wwwroot/Mohamad/CorpDetails.html
+++ b/Mohamad/wwwroot/Mohamad/CorpDetails.html
@@ -11,10 +11,10 @@
             <button value="{{model.AverageCommissionSortButton$::click}}" onmousedown="++this.value">Average Commission</button> -
             <button value="{{model.TrendSortButton$::click}}" onmousedown="++this.value">Positive Trend</button>
             <br />
-            <table rules="all" border="1" cellpadding="5" cellspacing="5">
+            <table>
                 <thead>
                     <tr>
-                        <th>Name</th><th>Number of homes sold</th><th>Total commission</th> <th>Average commission</th><th>Trend</th>
+                        <th width="150px">Name</th><th width="150px">Number of homes sold</th><th width="150px">Total commission</th> <th width="150px">Average commission</th><th width="150px">Trend</th>
                     </tr>
                 </thead>
                 <tbody>
